Реализовать M1 Web Chat adapter
